removed use of deprecated <copydir>

--- a/build.xml
+++ b/build.xml
@@ -20,6 +20,8 @@
 	</target>
 	
 	<target name="copysources">
-		<copydir dest="${builddir}" src="${srcdir}"></copydir>
+		<copy todir="${builddir}">
+			<fileset dir="${srcdir}" includes="**/*.java"/>
+		</copy>
 	</target>
 </project>
