The lib should be compiled with debugging on, because it's awesomer that way

--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
 	<target name="compile">
 		<delete dir="${builddir}" failonerror="false" />
 		<mkdir dir="${builddir}" />
-		<javac srcdir="${srcdir}" destdir="${builddir}">
+		<javac srcdir="${srcdir}" destdir="${builddir}" debug="true">
 			<classpath>
 				<fileset dir="${libdir}" includes="**/*.jar"/>
 			</classpath>
